test/negative/struct_mutual_ref.mut
# ERROR: mutual struct cycle — infinite size
struct A
    val: i64
    b: B
end

struct B
    val: i64
    a: A
end
